--- a/style.css
+++ b/style.css
@@ -1,112 +1,80 @@
-        * {
-            margin: 0;
-            font-family: 'Readex Pro', sans-serif;
-            font-weight: 600;
-        }
-        
-        body {
-            background-color: #000;
-        }
-        
-        header {
-            background-color: #000;
-            width: 100%;
-            height: 100px;
-        }
-        
-        div#first {
-            height: 300px;
-            width: 100%;
-            background-color: #CFCFCD;
-            display: block;
-        }
-        
-        div#second {
-            height: 500px;
-            width: 100%;
-            background-color: #9A879D;
-            display: block;
-        }
-        
-        div#third {
-            height: 500px;
-            width: 100%;
-            background-color: #7A3B69;
-            display: block;
-        }
-        
-        footer {
-            height: 200px;
-            width: 100%;
-            background-color: #000;
-            display: block;
-        }
-        
-        p {
-            margin-top: 0px;
-            margin-left: 4px;
-        }
-        
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #000;
-        }
-        
-        li {
-            float: left;
-        }
-        
-        li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        
-        li a:hover {
-            background-color: rgb(31, 30, 30);
-        }
-        
-        img {
-            margin: 3px;
-            width: 90px;
-            height: auto;
-            float: left;
-        }
-        
-        .text {
-            margin: 10px;
-            color: white;
-            text-align: center;
-        }
-        
-        h1 {
-            font-size: 72px;
-        }
-        
-        .textfirst {
-            font-size: 50px;
-        }
-        
-        #topic {
-            margin-left: 300px;
-        }
-        
-        #imageleft {
-            float: right;
-            margin-top: -250px;
-            height: 250px;
-            width: 250px;
-            transition-duration: 2s;
-            transition-delay: 0.2s;
-            transition-property: width;
-            transition-timing-function: linear;
-        }
-        
-        #imageleft:hover {
-            width: 500px;
-        }
+* {
+    margin: 0;
+    font-family: 'Readex Pro', sans-serif;
+    font-weight: 600;
+    color: #000;
+}
+
+body {
+    background-color: #333;
+}
+
+header {
+    background-color: #2a2a2a;
+    width: 100%;
+    height: 100px;
+}
+
+footer {
+    min-height: 65px;
+    width: 100%;
+    background-color: #333;
+    position: absolute;
+    bottom: 0;
+}
+
+p {
+    margin-top: 0px;
+    margin-left: 4px;
+}
+
+nav{
+    width: 100%;
+    height: 100px;
+    font-size: 25px;
+    background-color: #222;
+    text-align: center;
+
+}
+#menu{
+    gap: 10px;
+}
+img.logo {
+    margin-left: 3px;
+    width: 90px;
+    height: auto;
+    float: left;
+
+}
+
+.text {
+    margin: 10px;
+    color: #000;
+    text-align: center;
+}
+
+h1 {
+    font-size: 30px;
+}
+
+.textfirst {
+    font-size: 20px;
+}
+
+#first {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    margin-top:32px;
+}
+
+img#logo_big {
+    height: 100px;
+}
+
+@media only screen and (max-width: 620px) {
+    nav, #first, footer {
+      width: 100%;
+    }
+  }
