--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     font-family: 'Readex Pro', sans-serif;
     font-weight: 600;
-    color: #000;
+    color: #aaa;
 }
 
 body {
@@ -34,22 +34,20 @@ nav{
     font-size: 25px;
     background-color: #222;
     text-align: center;
-
+    position: relative;
 }
 #menu{
-    gap: 10px;
+    margin: 0;
 }
 img.logo {
-    margin-left: 3px;
-    width: 90px;
-    height: auto;
-    float: left;
-
+    left: 0;
+    height: 100%;
+    position: absolute;
 }
 
 .text {
     margin: 10px;
-    color: #000;
+    color: #aaa;
     text-align: center;
 }
 
