--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
     font-family: 'Readex Pro', sans-serif;
     font-weight: 600;
     color: #aaa;
-    -webkit-user-drag: none;
-    user-select: none;
 }
 
 body {
@@ -22,7 +20,9 @@ footer {
     width: 100%;
     background-color: #333;
     position: absolute;
-    bottom: 0;
+    bottom: 0;   
+    -webkit-user-drag: none;
+    user-select: none;
 }
 
 p {
@@ -78,3 +78,7 @@ img#logo_big {
       width: 100%;
     }
   }
+img{
+    -webkit-user-drag: none;
+    user-select: none;
+}
