--- a/style.css
+++ b/style.css
@@ -73,9 +73,12 @@ img#logo_big {
     height: 100px;
 }
 
-@media only screen and (max-width: 620px) {
+@media only screen and (max-width: 510+px) {
     nav, #first, footer {
       width: 100%;
+    }
+    img.logo{
+        display: none;
     }
   }
 img{
