--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 footer {
     min-height: 65px;
     width: 100%;
-    background-color: #333;
+    background-color: transparent;
     position: absolute;
     bottom: 0;   
     -webkit-user-drag: none;
@@ -86,4 +86,15 @@ img#logo_big {
 img{
     -webkit-user-drag: none;
     user-select: none;
+}
+
+canvas#myCanvas{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    border: none;
+    top: 0px;
+    left: 0;
+    z-index: -1;
+    background-color: #333;
 }
